fix: use CORS_ORIGINS env variable for WebSocket and CORS config (#40)
Both WebConfig and WebSocketConfig now read extra origins from
app.cors.allowed-origins property (CORS_ORIGINS env variable).
This fixes WebSocket connection failures in production where the
deploy domain was missing from WebSocketConfig allowed origins.

Co-authored-by: AI Assistant <noreply@anthropic.com>